--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.mycompany</groupId>
@@ -8,14 +7,14 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>mule-application</packaging>
 
-	<name>ibmi-program-call-api</name>
+	<name>demo-program-call</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<app.runtime>4.1.1</app.runtime>
-		<mule.maven.plugin.version>3.1.1</mule.maven.plugin.version>
+		<app.runtime>4.1.2</app.runtime>
+		<mule.maven.plugin.version>3.3.5</mule.maven.plugin.version>
 	</properties>
 
 	<build>
@@ -33,58 +32,26 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.infoview.mule</groupId>
-			<artifactId>as400-connector</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
-			<classifier>mule-plugin</classifier>
-		</dependency>
-
-		<dependency>
-			<groupId>net.sf.jt400</groupId>
-			<artifactId>jt400</artifactId>
-			<version>8.5</version>
-		</dependency>
-
-		<!-- license -->
-		<dependency>
-			<groupId>com.license4j</groupId>
-			<artifactId>license4j-runtime-library</artifactId>
-			<version>4.7.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.mule.connectors</groupId>
-			<artifactId>mule-http-connector</artifactId>
-			<version>1.2.0</version>
-			<classifier>mule-plugin</classifier>
-		</dependency>
-		<dependency>
-			<groupId>org.mule.connectors</groupId>
-			<artifactId>mule-sockets-connector</artifactId>
-			<version>1.1.1</version>
-			<classifier>mule-plugin</classifier>
-		</dependency>
-		<dependency>
 			<groupId>org.mule.modules</groupId>
 			<artifactId>mule-apikit-module</artifactId>
 			<version>1.1.1</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
-	</dependencies>
+			<dependency>
+            <groupId>com.infoview.mule</groupId>
+            <artifactId>as400-connector</artifactId>
+            <version>2.1.2-SNAPSHOT</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
+    	<dependency>
+            <groupId>org.mule.connectors</groupId>
+            <artifactId>mule-http-connector</artifactId>
+            <version>1.1.0</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
+    </dependencies>
 
 	<repositories>
-		<repository>
-			<releases>
-				<enabled>true</enabled>
-				<updatePolicy>always</updatePolicy>
-				<checksumPolicy>fail</checksumPolicy>
-			</releases>
-			<id>license4j-runtime-library</id>
-			<name>License4J Runtime Library Maven Repository</name>
-			<url>http://www.license4j.com/maven/</url>
-			<layout>default</layout>
-		</repository>
-
 		<repository>
 			<id>anypoint-exchange</id>
 			<name>Anypoint Exchange</name>
